Fixed module.xml, added composer.json, fixed minor glitches.

--- a/AdminIncludes/module_configuration.html
+++ b/AdminIncludes/module_configuration.html
@@ -34,7 +34,7 @@
                             <div class="form-group">
                                 <div class="col-sm-10">
                                     <p class="form-control-static">
-                                        {intl l='Un e-mail est envoyé à vos clients lors de l\'expédition de leur colis. Vous pouvez <a href="%url">modifier cet email ici</a>.'
+                                        {intl l='An email is sent to your customers when their order is ready for pickup. You can <a href="%url">change this email here</a>.'
                                         url = {url path="/admin/configuration/messages/update" message_id=$ID}
                                         d='localpickup.ai'
                                         }
